2011-11-28  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/i386/i486/pthread_cond_wait.S: Handle
	EAGAIN from FUTEX_WAIT_REQUEUE_PI.
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S: Likewise.

2011-11-15  Ulrich Drepper  <drepper@gmail.com>

	* pthread_getattr_np.c (pthread_getattr_np): Set FD_CLOEXEC for
	/proc/self/maps.

2011-10-29  Ulrich Drepper  <drepper@gmail.com>

	[BZ #13358]
	* sysdeps/unix/sysv/linux/x86_64/pthread_cond_timedwait.S
	(__pthread_cond_timedwait): Initialize %r15 correctly also for code
	path for kernels with FUTEX_CLOCK_REALTIME.
	Debugged by H.J. Lu <hjl.tools@gmail.com>.

2011-10-27  Andreas Schwab  <schwab@redhat.com>

	[BZ #13344]
	* sysdeps/pthread/pthread.h: Use __THREADNL instead of __THREAD
	for memory synchronization functions.
	* semaphore.h: Likewise.

2011-10-24  Ulrich Drepper  <drepper@gmail.com>

	* tst-cancel7.c: Avoid warning.
	* tst-mutex6.c: Likewise.
	* tst-mutex9.c: Likewise.
	* tst-mutexpi6.c: Likewise.

2011-10-23  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/i386/tls.h: Remove #include <list.h>.

2011-10-15  Ulrich Drepper  <drepper@gmail.com>

	* pthread_create.c (start_thread): Call __ctype_init.

2011-09-15  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/pthread/list.h: Define only list_t if __need_list_t is
	defined.
	(list_add): Add atomic_write_barrier.
	* descr.h: Define __need_list_t before including <list.h>.
	* nptl-init.c: Include <list.h>
	* allocatestack.c: Likewise.

2011-09-11  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/i386/tls.h: Remove HAVE_TLS_SUPPORT test.
	* sysdeps/ia64/tls.h: Likewise.
	* sysdeps/powerpc/tls.h: Likewise.
	* sysdeps/s390/tls.h: Likewise.
	* sysdeps/sh/tls.h: Likewise.
	* sysdeps/sparc/tls.h: Likewise.
	* sysdeps/x86_64/tls.h: Likewise.

2011-09-10  Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/pthread/malloc-machine.h: Define MUTEX_INITIALIZER.

	* sysdeps/unix/sysv/linux/i386/i486/sem_post.S: Don't handle
	!USE___THREAD.